--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,8 @@ php:
 install:
   - composer install --no-interaction --prefer-source
 
-script: vendor/bin/phpunit
+script: vendor/bin/phpunit --coverage-clover=coverage.clover
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
