--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "symfony/http-foundation": "^3.0",
     "symfony/options-resolver": "^3.0",
     "symfony/templating": "^3.0",
+    "symfony/translation": "^3.0",
     "soundasleep/html2text": "^0.3"
   },
   "require-dev": {
