--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "soundasleep/html2text": "^0.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.5",
+    "phpunit/phpunit": "^5.7|^6.0",
     "beberlei/assert": "^2.7",
     "friendsofphp/php-cs-fixer": "^2.0",
     "adlawson/vfs": "^0.12"
