--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "symfony/http-foundation": "^3.0",
     "symfony/options-resolver": "^3.0",
     "symfony/templating": "^3.0",
-    "symfony/translation": "^3.0"
+    "symfony/translation": "^3.0",
+    "pelago/emogrifier": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7|^6.0",
