--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,10 @@
   "require": {
     "php": "^7.1",
     "symfony/http-foundation": "^3.0",
-    "symfony/options-resolver": "^3.0",
-    "symfony/templating": "^3.0",
-    "symfony/translation": "^3.0"
+    "symfony/options-resolver": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7|^6.0",
-    "beberlei/assert": "^2.7",
     "friendsofphp/php-cs-fixer": "^2.0",
     "adlawson/vfs": "^0.12"
   },
